k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blm-microservices
  labels:
    name: blm-microservices
