k8s/store-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service
  labels:
    app: store-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-service
  template:
    metadata:
      labels:
        app: store-service
    spec:
      nodeSelector:
        workload-type: backend-apps
      containers:
        - name: store-service
          image: store-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
