k8s/admin-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin-service
  ports:
    - port: 8080
      targetPort: 8080
