k8s/auth-center-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-center
  labels:
    app: auth-center
spec:
  type: ClusterIP
  selector:
    app: auth-center
  ports:
    - port: 8080
      targetPort: 8080
