k8s/rider-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rider-service
  labels:
    app: rider-service
spec:
  type: ClusterIP
  selector:
    app: rider-service
  ports:
    - port: 8080
      targetPort: 8080
