k8s/store-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-service
  labels:
    app: store-service
spec:
  type: ClusterIP
  selector:
    app: store-service
  ports:
    - port: 8080
      targetPort: 8080
